2007-06-20  Mark Rowe  <mrowe@apple.com>

        Reviewed by Adam.

        * WebCore.exp: Export InspectorController::inspect so WebKit can see it.

2007-06-20  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Adele Peterson, Oliver Hunt, Anders Carlsson.

        Fixed <rdar://problem/5222911> Leopard9A446 : VitalSource Bookshelf 4.5: 
        Crashes when you click on sign in (stringByEvaluatingJavaScriptFromString 
        returning nil instead of "")

        I'm basically rolling out the change for <rdar://problem/4782422> because
        my testing shows that it was backwards.
        
        * html/HTMLElement.cpp:
        (dumpInnerHTML): New debug-only function to work around gdb being 
        perpetually suck-tastic.

        * page/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge stringByEvaluatingJavaScriptFromString:forceUserGesture:]):
        
        Return "", not nil. This function never used to return nil, so let's not
        start now. I've filed <rdar://problem/5283271> to cover the documentation bug,

2007-06-20  Adam Roben  <aroben@apple.com>

        Addressed some of Geoff's comments.

        * page/ContextMenuController.cpp:
        (WebCore::ContextMenuController::handleContextMenuEvent): Added a
        FIXME.
        * platform/ContextMenu.cpp:
        (WebCore::ContextMenu::addInspectElementItem): Null-check
        frame->page().

2007-06-20  Adam Roben  <aroben@apple.com>

        Fix crash in fast/dom/dir-no-body.html

        Reviewed by Mark.

        * html/HTMLDocument.cpp:
        (WebCore::HTMLDocument::createTokenizer): Don't assume we have a
        Frame, since we won't if someone creates an HTMLDocument from JS.

2007-06-20  Adam Roben  <aroben@apple.com>

        Land the new Inspector.

        Co-written with Tim Hatcher.

        Reviewed by Anders, Adele, Hyatt, and Sam.

        No regression tests possible.

        Add a new InspectorController that is in charge of the Inspector. It